apps/roundcube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manafishrov-roundcube
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
