apps/roundcube/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube-internal
  namespace: manafishrov-roundcube
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: roundcube
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: manafishrov-roundcube
spec:
  selector:
    app: roundcube
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: manafishrov-roundcube
spec:
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: http
