apps/roundcube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: roundcube-public
  namespace: manafishrov-roundcube
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - mail.manafishrov.com
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
